--- a/careers.html
+++ b/careers.html
@@ -259,7 +259,7 @@
                         <h4>Quick Links</h4>
                         <a href="index.html">About Us <br></a>
                         <a href="services.html">Services <br></a>
-                        <a href="carriers.html">Careers <br></a>
+                        <a href="careers.html">Careers <br></a>
                         <a href="reviews.html">Reviews <br></a>
                         <a href="contacts.html">Contact Us</a>
                     </div>
