--- a/services.html
+++ b/services.html
@@ -66,54 +66,67 @@
         </div>
     </div>
 
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="logo.jpg" alt="logo" style="width: 70px;" class="rounded-pill">
-                <span>A</span>akruthaa <span>C</span>onsultancy
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About Us</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Services
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="services.html">Executive Search and Recruitment</a></li>
-                            <li><a class="dropdown-item" href="services.html">Contract Staffing</a></li>
-                            <li><a class="dropdown-item" href="services.html">Payroll Service & Compensation
-                                    Benefits</a></li>
-                            <li><a class="dropdown-item" href="services.html">Statutory Compliances and Legal &
-                                    Liaison</a></li>
-                            <li><a class="dropdown-item" href="services.html">Training and Development Support</a></li>
-                            <li><a class="dropdown-item" href="services.html">HR Policy Framework & Other Support</a>
-                            </li>
-                            <li><a class="dropdown-item" href="services.html">EHS & Corporate Social Responsible
-                                    Activities</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="careers.html">Carriers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="reviews.html">Reviews</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
+    <!-- Side Navigation Bar -->
+    <div id="sideNav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">About Us</a>
+        <a href="services.html">Services</a>
+        <a href="careers.html">Carriers</a>
+        <a href="reviews.html">Reviews</a>
+        <a href="contact.html">Contact Us</a>
+    </div>
+    <!-- Main Content -->
+    <div id="main">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <img src="logo.jpg" alt="logo" style="width: 70px;" class="rounded-pill">
+                    <span>A</span>akruthaa <span>C</span>onsultancy
+                </a>
+                <button class="navbar-toggler" type="button" onclick="openNav()">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">About Us</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Services
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="services.html">Executive Search and Recruitment</a>
+                                </li>
+                                <li><a class="dropdown-item" href="services.html">Contract Staffing</a></li>
+                                <li><a class="dropdown-item" href="services.html">Payroll Service & Compensation
+                                        Benefits</a></li>
+                                <li><a class="dropdown-item" href="services.html">Statutory Compliances and Legal &
+                                        Liaison</a></li>
+                                <li><a class="dropdown-item" href="services.html">Training and Development Support</a>
+                                </li>
+                                <li><a class="dropdown-item" href="services.html">HR Policy Framework & Other
+                                        Support</a>
+                                </li>
+                                <li><a class="dropdown-item" href="services.html">EHS & Corporate Social Responsible
+                                        Activities</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="careers.html">Carriers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="reviews.html">Reviews</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
     <section class="recruitment" id="recruitment">
         <div class="box">
             <p>At Aakruthaa HR Consultancy, our executive recruitment services are delivered by highly skilled
@@ -206,16 +219,18 @@
 
 
 
+
+    <!--Bootstrap JS-->
+    <script src="services.js"></script>r
+    <script src=" https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
-<!--Bootstrap JS-->
-<script src=" https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 
 </html>
