slogan bgcolour and textcolor changed

--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
                         <a href="services.html">Services <br></a>
                         <a href="careers.html">Careers <br></a>
                         <a href="reviews.html">Reviews <br></a>
-                        <a href="contacts.html">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </div>
                 </div>
             </div>
