--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     <!-- Hero Section -->
     <div class="hero-section position-relative">
         <img src="bg3.jpg" alt="Hero Image" class="img-fluid w-100">
-        <div class="hero-content position-absolute top-50 start-50 translate-middle text-center text-white">
-            <h5 class="animate__animated animate__fadeIn">Crafting Success with Insight and Integrity</h5>
+        <div class="hero-content position-absolute top-50 start-50 translate-middle text-center text-white" id="slogan">
+            <h5 class="animate__animated animate__fadeIn">Crafting Success with Insight and Integrity</h5 >
             <h5 class="animate__animated animate__fadeIn">Shaping Futures, One Solution at a Time</h5>
         </div>
     </div>
@@ -358,7 +358,7 @@
                         <a href="services.html">Services <br></a>
                         <a href="careers.html">Careers <br></a>
                         <a href="reviews.html">Reviews <br></a>
-                        <a href="contacts.html">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </div>
                 </div>
             </div>
