--- a/careers.html
+++ b/careers.html
@@ -114,7 +114,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="careers.html">Carriers</a>
+                            <a class="nav-link" href="careers.html">Careers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="reviews.html">Reviews</a>
@@ -128,9 +128,9 @@
         </nav>
     </div>
 
-    <div class="container-fluid" id="carrier">
+    <div class="container-fluid" id="career">
         <img src="carrer.jpg">
-        <h3>Carrier</h3>
+        <h3>Careers</h3>
         <p>Aakruthaa HR Consultancy is excited to welcome dynamic and ambitious candidates who are passionate about
             personal and
             organizational growth through innovative and inspiring approaches. Join us to tackle exciting challenges and
