--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- Main Content -->
     <div id="main">
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-            <div class="container">
+            <div class="container" id="stickytop">
                 <a class="navbar-brand" href="index.html">
                     <img src="logo.jpg" alt="logo" style="width: 70px;" class="rounded-pill">
                     <span>A</span>akruthaa <span>C</span>onsultancy
@@ -117,7 +117,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="careers.html">Carriers</a>
+                            <a class="nav-link" href="careers.html">Careers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="reviews.html">Reviews</a>
@@ -135,7 +135,7 @@
     <div class="hero-section position-relative">
         <img src="bg3.jpg" alt="Hero Image" class="img-fluid w-100">
         <div class="hero-content position-absolute top-50 start-50 translate-middle text-center text-white" id="slogan">
-            <h5 class="animate__animated animate__fadeIn">Crafting Success with Insight and Integrity</h5 >
+            <h5 class="animate__animated animate__fadeIn">Crafting Success with Insight and Integrity</h5>
             <h5 class="animate__animated animate__fadeIn">Shaping Futures, One Solution at a Time</h5>
         </div>
     </div>
