--- a/reviews.html
+++ b/reviews.html
@@ -114,7 +114,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="careers.html">Carriers</a>
+                            <a class="nav-link" href="careers.html">Careers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="reviews.html">Reviews</a>
