--- a/careers.html
+++ b/careers.html
@@ -71,14 +71,14 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">About Us</a>
         <a href="services.html">Services</a>
-        <a href="careers.html">Carriers</a>
+        <a href="careers.html">Careers</a>
         <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact Us</a>
     </div>
     <!-- Main Content -->
     <div id="main">
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-            <div class="container">
+            <div class="container" id="stickytop">
                 <a class="navbar-brand" href="index.html">
                     <img src="logo.jpg" alt="logo" style="width: 70px;" class="rounded-pill">
                     <span>A</span>akruthaa <span>C</span>onsultancy
