--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">About Us</a>
         <a href="services.html">Services</a>
-        <a href="careers.html">Carriers</a>
+        <a href="careers.html">Careers</a>
         <a href="reviews.html">Reviews</a>
         <a href="contact.html">Contact Us</a>
     </div>
 
     <!-- Main Content -->
     <div id="main">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="stickytop1">
             <div class="container" id="stickytop">
                 <a class="navbar-brand" href="index.html">
                     <img src="logo.jpg" alt="logo" style="width: 70px;" class="rounded-pill">
